Created deletePost ❎
